--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.1.0",
+    "axios": "^1.6.7",
+    "lodash.filter": "^4.6.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "^2.14.1",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.6.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
